--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -67,8 +67,7 @@ target_compile_definitions(${PROJECT_NAME}
   PUBLIC
     USE_NEW_TF2_TOMSG=${USE_NEW_TF2_TOMSG})
 
-target_link_libraries(${PROJECT_NAME}
-  PUBLIC
+target_link_libraries(${PROJECT_NAME} PUBLIC
   ${GeographicLib_LIBRARIES}
   opencv_calib3d
   opencv_core
@@ -88,14 +87,13 @@ target_link_libraries(${PROJECT_NAME}
   swri_roscpp::swri_roscpp_library
   tf2::tf2
   tf2_geometry_msgs::tf2_geometry_msgs
-  tf2_ros::tf2_ros
-)
+  tf2_ros::tf2_ros)
 
 add_library(${PROJECT_NAME}_nodes SHARED
   src/nodes/dynamic_transform_publisher.cpp
   src/nodes/gps_transform_publisher.cpp
-  src/nodes/obstacle_transformer.cpp
-)
+  src/nodes/obstacle_transformer.cpp)
+
 target_include_directories(${PROJECT_NAME}_nodes PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
@@ -119,14 +117,13 @@ rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_transform_util::Gps
 rclcpp_components_register_nodes(${PROJECT_NAME}_nodes "swri_transform_util::ObstacleTransformer")
 target_link_libraries(${PROJECT_NAME}_nodes
   ${PROJECT_NAME}
+  ${rcl_interfaces_TARGETS}
+  ${rclcpp_components_TARGETS}
   ${marti_nav_msgs_TARGETS}
-  ${swri_roscpp_TARGETS}
-  rcl_interfaces::rcl_interfaces
-  rclcpp_components::rclcpp_components)
+  ${swri_roscpp_TARGETS})
 
 add_executable(lat_lon_tf_echo src/nodes/lat_lon_tf_echo.cpp)
-target_include_directories(lat_lon_tf_echo
-  PUBLIC
+target_include_directories(lat_lon_tf_echo PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
 
