--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -15,7 +15,6 @@
   <buildtool_depend>pkg-config</buildtool_depend>
 
   <depend>ament_index_cpp</depend>
-  <depend>boost</depend>
   <depend>camera_calibration_parsers</depend>
   <depend>cv_bridge</depend>
   <depend>eigen</depend>
@@ -24,6 +23,7 @@
   <depend>image_transport</depend>
   <depend>message_filters</depend>
   <depend>nav_msgs</depend>
+  <depend>rcl_interfaces</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>rclpy</depend>
