Add dependency on libopencv-dev for pkgs directly using OpenCV
Signed-off-by: Christophe Bedard <bedard.christophe@gmail.com>

--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -20,6 +20,7 @@
   <depend>eigen</depend>
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
+  <depend>libopencv-dev</depend>
   <depend>message_filters</depend>
   <depend>rcl_interfaces</depend>
   <depend>rclcpp</depend>
