--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -20,6 +20,7 @@
   -->
   <depend>eigen</depend>
   <depend>geos</depend>
+  <depend>libopencv-dev</depend>
   <depend>tf2</depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
