--- a/swri_opencv_util/package.xml
+++ b/swri_opencv_util/package.xml
@@ -14,6 +14,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   
   <depend>cv_bridge</depend>
+  <depend>libopencv-dev</depend>
   <depend>swri_math_util</depend>
 
   <export>
