switch to yaml_cpp_vendor to ensure that the version that is used is the same as is used in core ros packages

--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -39,7 +39,7 @@
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2_ros</depend>
-  <depend>yaml-cpp</depend>
+  <depend>yaml_cpp_vendor</depend>
 
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-yaml</exec_depend>
